[style] Add class "osp_bike" to the exceptional section image
The commit adds the class "osp_bike" to the image in the exceptional section of index.html. This change ensures consistent styling across the website.

[style] Adjust padding and text alignment in modern section

The commit adjusts the padding and text alignment in the modern section of styles.css. This change improves the visual layout and readability of the content.

[style] Update font size, color, and text shadow in threecolumn section

The commit updates the font size, color, and text shadow in the threecolumn section of styles.css. This change enhances the visual appearance and legibility of headings within this section.

[style] Hide line break on smaller screens

The commit hides a line break on smaller screens in styles.css. This change improves responsiveness by ensuring consistent formatting across different screen sizes.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section class="exceptional">
     <div class="flexbox">
         <div>
-            <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/osp_bike.png" alt="An Exceptional Force Seeking Exceptional Cadets"/>
+            <img class="osp_bike" src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/osp_bike.png" alt="An Exceptional Force Seeking Exceptional Cadets"/>
         </div>
         <div>
             <h2>An Exceptional Force Seeking Exceptional Cadets</h2>
@@ -31,22 +31,23 @@
     <div class="bg">
         <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/vector_oregon_outline.png" alt="Background Image"/>
     </div>
-    <div class="text"></div>
-    <h2>Join Our Modern, Multi-Disciplinary Police Force</h2>
-    <button class="btn btn-primary btn-hack center" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
+    <div class="text">
+        <h2>Join Our Modern, Multi-Disciplinary Police Force</h2>
+        <button class="btn btn-primary btn-hack center" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
+    </div>
 </section>
 <section class="threecolumn">
     <div class="flexbox">
-        <div>
-            <h3>More than a job. A calling.</h3>
+        <div class="column">
+            <h3>More than a job.<br/> A calling.</h3>
             <p>Oregon State Police are service-oriented individuals who are hardwired to respect and apply the law. Through charter and disposition, we find purpose in the process of keeping the peace and protecting the rights of all of Oregon’s communities.</p>
         </div>
-        <div>
-            <h3>Opportunities as diverse as the state you will serve.</h3>
+        <div class="column">
+            <h3>Opportunities as diverse<br/> as the state you will serve.</h3>
             <p>Troopers are trained to work throughout the state. You will be encouraged to prepare for assignments ranging from patrol to interdiction to investigation and more; ensuring you willll have the skills and flexibility to adapt and continue to advance your career.</p>
         </div>
-        <div>
-            <h3>A serious choice for serious people.</h3>
+        <div class="column">
+            <h3>A serious choice<br/> for serious people.</h3>
             <p>Before anyone steps behind our badge, Oregon State Police Recruit Troopers will have demonstrated innate abilities to meet adversity with composure, calamity with compassion, and uncertainty with confidence.</p>
         </div>
     </div>
