[style] Updated external stylesheet and scripts
- Updated the link to the external stylesheet in index.html.
- Added a new script.js file with updated code.
- Removed unnecessary script tags from index.html.

--- a/index.html
+++ b/index.html
@@ -79,44 +79,13 @@
     </div>
 </section>
 <!-- STYLING -->
-<link rel="stylesheet" href="styles.css" async>
-<!-- STYLING -->
+<link rel="stylesheet" href="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/styles.css" async>
 <link rel="preconnect" href="https://fonts.googleapis.com" async>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin async>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" rel="stylesheet" async>
-<!-- GA4 -->
-<script async src=“https://www.googletagmanager.com/gtag/js?id=G-VH41JYZ1B0”></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag(‘js’, new Date());
-gtag(‘config’, ‘G-VH41JYZ1B0’);
-</script>
-<!-- GTM -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({‘gtm.start’:
-new Date().getTime(),event:‘gtm.js’});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!=‘dataLayer’?‘&l=‘+l:‘’;j.async=true;j.src=
-’https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,‘script’,‘dataLayer’,‘GTM-T8JZT2G2’);</script>
-<!-- Video Player -->
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-    var link = document.createElement('link');
-        link.rel = 'stylesheet';
-        link.type = 'text/css';
-        link.href = 'https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/styles.css';
-        document.head.appendChild(link);
-    var video = document.getElementById('ospVideo');
-        video.autoplay = true;
-        video.muted = true;
-        video.loop = true;
-        video.play();
-    // // Select all the elements with .exceptional .flexbox
-    // var elements = document.querySelectorAll('.exceptional .flexbox');
-    
-    // // Loop through the NodeList and apply the style to each element
-    // elements.forEach(function(element) {
-    //     element.style.gap = '128px';
-    // });
-});
-</script>
+<!-- SCRIPTS -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VH41JYZ1B0"></script>
+<script async src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/script.js"></script>
+<!-- END -->
+<script src="script.js" async></script>
+<link rel="stylesheet" href="styles.css" async>
