[style] Update crossorigin attribute in index.html
The crossorigin attribute was added to the stylesheet and script links in the index.html file. This change ensures that the resources are fetched with CORS enabled, improving security and preventing potential issues with cross-origin requests.

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     </div>
 </section>
 <!-- STYLING -->
-<link rel="stylesheet" href="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/styles.css" async>
-<link rel="preconnect" href="https://fonts.googleapis.com" async>
+<link rel="stylesheet" href="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/styles.css" crossorigin async>
+<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin async>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin async>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" rel="stylesheet" async>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" rel="stylesheet" crossorigin async>
 <!-- SCRIPTS -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VH41JYZ1B0"></script>
-<script async src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/script.js"></script>
+<script src="https://www.googletagmanager.com/gtag/js?id=G-VH41JYZ1B0" crossorigin async></script>
+<script src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/script.js" crossorigin async></script>
 <!-- END -->
-<script src="script.js" async></script>
-<link rel="stylesheet" href="styles.css" async>
+<script src="script.js" crossorigin async></script>
+<link rel="stylesheet" href="styles.css" crossorigin async>
