[style] Updated image alt text and added new background images
- Updated the alt text for an image in index.html to "Oregon Outline"
- Added new background images in index.html and script.js
- Made styling changes to various sections in styles.css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </section>
 <section class="modern">
     <div class="bg">
-        <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/vector_oregon_outline.png" alt="Background Image"/>
+        <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/vector_oregon_outline.png" alt="Oregon Outline"/>
     </div>
     <div class="text">
         <h2>Join Our Modern, Multi-Disciplinary Police Force</h2>
@@ -53,39 +53,45 @@
     </div>
 </section>
 <section class="whatittakes">
+    <div class="bg-container">
+        <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/osp_text.png" alt="OSP"/>
+    </div>
     <div class="flexbox">
         <div class="text">
-            <h2>Do You Have What it Takes?</h2>
+            <h2>Do You Have <br/>What it Takes?</h2>
             <p>Interested in how to become a Trooper? Before we invite you to our training academy, you will need to show you meet the requirements and have the skills needed to succeed as an Oregon State Trooper. Beyond the physical and academic qualifications, this includes possessing the composure, compassion and confidence necessary to serve.</p>
             <button class="btn btn-primary btn-hack" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
         </div>
         <div class="video">
-            <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/osp_face.png" alt="Do You Have What it Takes?" />
+            <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/osp_face.png" width="100%" alt="Do You Have What it Takes?" />
         </div>
     </div>
 </section>
 <section class="service">
+    <div class="bg-container">
+        <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/vector-oregon.png" alt="Oregon"/>
+    </div>
     <div class="flexbox">
-        <div>
-            <h2>A Natural Next Step for Military Veterans</h2>
+        <div class="column one">
+            <h2>A Natural Next Step <br/>for Military Veterans</h2>
             <p>The skills you have gained in service of your country directly transfer to a career in law enforcement. If you are looking to continue your career in service, the Oregon State Police is a perfect fit.</p>
             <button class="btn btn-primary btn-hack serv" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
         </div>
-        <div>
-            <h2>Make a Lateral Transfer</h2>
+        <div class="column two">
+            <h2>Make a Lateral <br/>Transfer</h2>
             <p>Are you already working in another part of law enforcement? Or are you a cop in another state looking to make a lateral transfer? Our pay structure, benefits, and diversity of programs, jobs, and growth opportunities are exceptional.</p>
             <button class="btn btn-primary btn-hack serv" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
         </div>
     </div>
 </section>
 <!-- STYLING -->
-<link rel="stylesheet" href="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/styles.css" crossorigin async>
-<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin async>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin async>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" rel="stylesheet" crossorigin async>
+<link rel="preconnect" href="https://fonts.googleapis.com" async>
+<link rel="preconnect" href="https://fonts.gstatic.com"async>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" rel="stylesheet"async>
 <!-- SCRIPTS -->
-<script src="https://www.googletagmanager.com/gtag/js?id=G-VH41JYZ1B0" crossorigin async></script>
-<script src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/script.js" crossorigin async></script>
+<script src="https://www.googletagmanager.com/gtag/js?id=G-VH41JYZ1B0"async></script>
 <!-- END -->
-<script src="script.js" crossorigin async></script>
-<link rel="stylesheet" href="styles.css" crossorigin async>
+<script src="script.js" async></script>
+<link rel="stylesheet" href="styles.css" async>
+<!-- <link rel="stylesheet" href="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/styles.css" async> -->
+<!-- <script src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/script.js" async></script> -->
