[style] Updated background images and styles - Updated background images for header, exceptional section, modern section, whatittakes section, and service section - Adjusted styles for smaller screens to improve responsiveness

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <header class="applythelaw">
-    <div class="bg-container">
-        <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/applythelaw_bg.png" alt="Background Image"/>
-    </div>
+    <!-- <div class="bg-container">
+        <img src="https://storage.googleapis.com/osp-video/img/applythelaw_bg.png" alt="Background Image"/>
+    </div> -->
     <div class="flexbox">
         <div class="text">
             <h1>Apply the Law.<br/> Apply Yourself.<br/> <span>Apply Today.</span></h1>
@@ -10,7 +10,10 @@
         </div>
         <div class="video">
             <video id="ospVideo" width="100%" autoplay muted loop>
-                <source src="https://storage.googleapis.com/osp-video/OSP.mp4" type="video/mp4">
+                <!-- FIREFOX -->
+                <source src="https://storage.googleapis.com/osp-video/OSP_apply_the_law-1580x1080.mp4" type="video/mp4">
+                <!-- SAFAR, CHROME -->
+                <source src="https://storage.googleapis.com/osp-video/OSP_apply_the_law-1580x1080_hvec.mp4" type="video/mp4">
             </video>       
         </div>        
     </div>
@@ -18,7 +21,7 @@
 <section class="exceptional">
     <div class="flexbox" style="gap: 128px;">
         <div>
-            <img class="osp_bike" src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/osp_bike.png" alt="An Exceptional Force Seeking Exceptional Cadets"/>
+            <img class="osp_bike" src="https://storage.googleapis.com/osp-video/img/osp_bike.png" alt="An Exceptional Force Seeking Exceptional Cadets"/>
         </div>
         <div>
             <h2>An Exceptional Force Seeking Exceptional Cadets</h2>
@@ -29,7 +32,7 @@
 </section>
 <section class="modern">
     <div class="bg">
-        <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/vector_oregon_outline.png" alt="Oregon Outline"/>
+        <img src="https://storage.googleapis.com/osp-video/img/vector_oregon_outline.png" alt="Oregon Outline"/>
     </div>
     <div class="text">
         <h2>Join Our Modern, Multi-Disciplinary Police Force</h2>
@@ -54,7 +57,7 @@
 </section>
 <section class="whatittakes">
     <div class="bg-container">
-        <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/osp_text.png" alt="OSP"/>
+        <img src="https://storage.googleapis.com/osp-video/img/osp_text.png" alt="OSP"/>
     </div>
     <div class="flexbox">
         <div class="text">
@@ -63,13 +66,14 @@
             <button class="btn btn-primary btn-hack" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
         </div>
         <div class="video">
-            <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/osp_face.png" width="100%" alt="Do You Have What it Takes?" />
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/h8uy_Gvtolo?si=kResA59zx585YGxx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <!-- <img src="https://storage.googleapis.com/osp-video/img/osp_face.png" width="100%" alt="Do You Have What it Takes?" /> -->
         </div>
     </div>
 </section>
 <section class="service">
     <div class="bg-container">
-        <img src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/img/vector-oregon.png" alt="Oregon"/>
+        <img src="https://storage.googleapis.com/osp-video/img/vector-oregon.png" alt="Oregon"/>
     </div>
     <div class="flexbox">
         <div class="column one">
