--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <header class="applythelaw">
     <!-- <div class="bg-container">
         <img src="https://storage.googleapis.com/osp-video/img/applythelaw_bg.png" alt="Background Image"/>
@@ -10,10 +11,10 @@
         </div>
         <div class="video">
             <video id="ospVideo" width="100%" autoplay muted loop>
-                <!-- FIREFOX -->
+                <!-- FIREFOX, EDGE, Internet Explorer -->
                 <source src="https://storage.googleapis.com/osp-video/OSP_apply_the_law-1580x1080.mp4" type="video/mp4">
                 <!-- SAFAR, CHROME -->
-                <source src="https://storage.googleapis.com/osp-video/OSP_apply_the_law-1580x1080_hvec.mp4" type="video/mp4">
+                <!-- <source src="https://storage.googleapis.com/osp-video/OSP_apply_the_law-1580x1080_hvec.mp4" type="video/mp4"> -->
             </video>       
         </div>        
     </div>
