--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 
 <header class="applythelaw">
-    <!-- <div class="bg-container">
-        <img src="https://storage.googleapis.com/osp-video/img/applythelaw_bg.png" alt="Background Image"/>
-    </div> -->
     <div class="flexbox">
         <div class="text">
             <h1>Apply the Law.<br/> Apply Yourself.<br/> <span>Apply Today.</span></h1>
             <p>Launch a rewarding and impactful career<br/> as a Trooper with the Oregon State Police.</p>
-            <button class="btn btn-primary btn-hack" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
         <div class="video">
             <video id="ospVideo" width="100%" autoplay muted loop>
-                <!-- FIREFOX, EDGE, Internet Explorer -->
-                <source src="https://storage.googleapis.com/osp-video/OSP_apply_the_law-1580x1080.mp4" type="video/mp4">
-                <!-- SAFAR, CHROME -->
-                <!-- <source src="https://storage.googleapis.com/osp-video/OSP_apply_the_law-1580x1080_hvec.mp4" type="video/mp4"> -->
+                <source id="videoSource" type="">
             </video>       
         </div>        
     </div>
@@ -27,7 +21,7 @@
         <div>
             <h2>An Exceptional Force Seeking Exceptional Cadets</h2>
             <p>The Oregon State Police is a modern, multi-disciplined policing agency charged with protecting Oregon’s people, wildlife, and natural resources. We are recruiting exceptional individuals for an exceptional opportunity to build a meaningful, fulfilling career in law enforcement.</p>
-            <button class="btn btn-primary btn-hack" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
     </div>
 </section>
@@ -37,7 +31,7 @@
     </div>
     <div class="text">
         <h2>Join Our Modern, Multi-Disciplinary Police Force</h2>
-        <button class="btn btn-primary btn-hack center" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
+        <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
     </div>
 </section>
 <section class="threecolumn">
@@ -64,7 +58,7 @@
         <div class="text">
             <h2>Do You Have <br/>What it Takes?</h2>
             <p>Interested in how to become a Trooper? Before we invite you to our training academy, you will need to show you meet the requirements and have the skills needed to succeed as an Oregon State Trooper. Beyond the physical and academic qualifications, this includes possessing the composure, compassion and confidence necessary to serve.</p>
-            <button class="btn btn-primary btn-hack" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
         <div class="video">
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/h8uy_Gvtolo?si=kResA59zx585YGxx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -80,16 +74,17 @@
         <div class="column one">
             <h2>A Natural Next Step <br/>for Military Veterans</h2>
             <p>The skills you have gained in service of your country directly transfer to a career in law enforcement. If you are looking to continue your career in service, the Oregon State Police is a perfect fit.</p>
-            <button class="btn btn-primary btn-hack serv" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn serv" role="button">Apply Now</a>
         </div>
         <div class="column two">
             <h2>Make a Lateral <br/>Transfer</h2>
             <p>Are you already working in another part of law enforcement? Or are you a cop in another state looking to make a lateral transfer? Our pay structure, benefits, and diversity of programs, jobs, and growth opportunities are exceptional.</p>
-            <button class="btn btn-primary btn-hack serv" onclick="window.location.href='https://www.oregon.gov/osp/jobs/Pages/Become-a-trooper.aspx'">Apply Now</button>
+            <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn serv" role="button">Apply Now</a>
         </div>
     </div>
 </section>
 <!-- STYLING -->
+<img height="1" width="1" style="border-style:none;" alt="" src="https://insight.adsrvr.org/track/pxl/?adv=ada34qp&ct=0:ltpduap&fmt=3"/>
 <link rel="preconnect" href="https://fonts.googleapis.com" async>
 <link rel="preconnect" href="https://fonts.gstatic.com"async>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" rel="stylesheet"async>
@@ -98,5 +93,3 @@
 <!-- END -->
 <script src="script.js" async></script>
 <link rel="stylesheet" href="styles.css" async>
-<!-- <link rel="stylesheet" href="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/styles.css" async> -->
-<!-- <script src="https://raw.githubusercontent.com/Watson-Creative/osp.github.io/main/script.js" async></script> -->
