[style] Updated HTML and CSS styles for mobile responsiveness
- Added doctype, meta tags, and title to the HTML file
- Made changes to the CSS file for better mobile display
- Adjusted font sizes and line heights for headings and paragraphs on smaller screens
- Modified image widths and padding for improved layout on mobile devices

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Test</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
 <header class="applythelaw">
     <div class="flexbox">
         <div class="text">
@@ -14,10 +22,10 @@
 </header>
 <section class="exceptional">
     <div class="flexbox" style="gap: 128px;">
-        <div>
+        <div class="osp_bike">
             <img class="osp_bike" src="https://storage.googleapis.com/osp-video/img/osp_bike.png" alt="An Exceptional Force Seeking Exceptional Cadets"/>
         </div>
-        <div>
+        <div class="text">
             <h2>An Exceptional Force Seeking Exceptional Cadets</h2>
             <p>The Oregon State Police is a modern, multi-disciplined policing agency charged with protecting Oregon’s people, wildlife, and natural resources. We are recruiting exceptional individuals for an exceptional opportunity to build a meaningful, fulfilling career in law enforcement.</p>
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
@@ -82,6 +90,8 @@
         </div>
     </div>
 </section>
+</body>
+</html>
 <!-- STYLING -->
 <img height="1" width="1" style="border-style:none;" alt="" src="https://insight.adsrvr.org/track/pxl/?adv=ada34qp&ct=0:ltpduap&fmt=3"/>
 <link rel="preconnect" href="https://fonts.googleapis.com" async>
