--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<!-- DELETE ABOVE -->
 <header class="applythelaw">
     <div class="flexbox">
         <div class="text">
@@ -14,9 +15,11 @@
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
         <div class="video">
-            <video id="ospVideo" width="100%" autoplay muted loop>
+            <img id="ospVideo" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%">
+            <!-- <video id="ospVideo" width="100%" autoplay muted loop>
                 <source id="videoSource" type="">
-            </video>       
+                <img id="ospVideo" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%">
+            </video>        -->
         </div>        
     </div>
 </header>
@@ -67,7 +70,7 @@
             <p>Interested in how to become a Trooper? Before we invite you to our training academy, you will need to show you meet the requirements and have the skills needed to succeed as an Oregon State Trooper. Beyond the physical and academic qualifications, this includes possessing the composure, compassion and confidence necessary to serve.</p>
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
-        <div class="video">
+        <div class="video youtube">
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/h8uy_Gvtolo?si=kResA59zx585YGxx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <!-- <img src="https://storage.googleapis.com/osp-video/img/osp_face.png" width="100%" alt="Do You Have What it Takes?" /> -->
         </div>
@@ -90,6 +93,7 @@
         </div>
     </div>
 </section>
+<!-- DELETE BELOW -->
 </body>
 </html>
 <!-- STYLING -->
