[style] Update video element and apply styles
The video element in index.html was updated to use a webm source instead of an img source. Additionally, the script.js file was modified to set autoplay, muted, and loop properties for the video. Styles were also applied to elements with class 'applythelaw' and within '.exceptional .flexbox' and '.threecolumn .flexbox'.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <a href="https://oregon.wd5.myworkdayjobs.com/SOR_External_Career_Site/job/Salem--OSP--General-Headquarters/Oregon-State-Police-Recruit-Trooper---Lateral-and-Entry-Level_REQ-138392" class="apply-now-btn" role="button">Apply Now</a>
         </div>
         <div class="video">
-            <img id="ospVideo" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%">
-            <!-- <video id="ospVideo" width="100%" autoplay muted loop>
+            <!-- <img id="ospVideo" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%"> -->
+            <video id="ospVideo" width="100%" autoplay muted loop>
                 <source id="videoSource" type="">
                 <img id="ospVideo" src="https://storage.googleapis.com/osp-video/osp_video_1780x10801.png" alt="Apply the Law. Apply Yourself. Apply Today." width="100%">
-            </video>        -->
+            </video>       
         </div>        
     </div>
 </header>
